force-app/main/default/objects/Booking_Event__e/Booking_Event__e.object-meta.xml
<CustomObject>
    <description>Platform Event published when booking lifecycle changes occur</description>
    <label>Booking Event</label>
    <pluralLabel>Booking Events</pluralLabel>
</CustomObject>