force-app/main/default/objects/Booking_Event__e/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <description>What happened to the booking</description>
    <label>Action</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>