force-app/main/default/objects/Booking_Event__e/fields/Booking_Id__c.field-meta.xml
<CustomField>
    <fullName>Booking_Id__c</fullName>
    <description>ID of the booking that triggered this event</description>
    <label>Booking ID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>